# pso-protocol

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  cog.toml  deny.toml  foundry.toml  remappings.txt
.github/workflows/: ci.yml  release.yml
crates/pso-protocol/: Cargo.toml  README.md
crates/pso-protocol-derive/: Cargo.toml  README.md
crates/pso-protocol-derive/src/: lib.rs
crates/pso-protocol/src/: codec.rs  error.rs  lib.rs  suite.rs
crates/pso-protocol/src/primitive/: curve.rs  exchange.rs  hash.rs  kdf.rs  mod.rs  signature.rs
crates/pso-protocol/src/protocol/: entity.rs  imt.rs  key.rs  mod.rs  zk.rs
crates/pso-protocol/tests/: limbed.rs  sorted_set.rs  suite_battery.rs
solidity/: PsoProtocol.sol  PsoProtocol.t.sol
src/: binding.rs  error.rs  fr.rs  imt.rs  lib.rs  merkle.rs  nft.rs  ownership.rs  witness.rs
src/hash/: builder.rs  mod.rs  poseidon3.rs  poseidon4.rs  poseidon5.rs
tests/: cross_side_equality.rs
