[workspace]
members = ["crates/*"]
resolver = "2"

# Shared across the published crates so `pso-protocol` and its
# `pso-protocol-derive` companion always ship at the same version. The
# cocogitto pre-bump hook rewrites the first `^version` line below.
[workspace.package]
version     = "0.9.0"
edition    = "2021"
authors    = ["PSO Lab"]
license    = "MIT"
repository = "https://github.com/psonet/pso-protocol"

# Centralized dependency versions. Members opt in with `{ workspace = true }`
# and add their own features; versions/default-features are pinned once here.
[workspace.dependencies]
ark-bn254     = { version = "0.6", default-features = false }
ark-grumpkin  = { version = "0.6", default-features = false }
ark-ff        = { version = "0.6", default-features = false }
ark-ec        = { version = "0.6", default-features = false }
ark-std       = { version = "0.6", default-features = false }
ark-serialize = { version = "0.6", default-features = false }
# Type-level byte-length sizing for the Codec key (de)serialization.
generic-array = "1"
pso-poseidon  = "0.4"
# Pure-Rust BLAKE2s for the barretenberg-compatible Grumpkin Schnorr challenge.
blake2        = { version = "0.10", default-features = false }
alloy-primitives = { version = "1", default-features = false }
thiserror     = { version = "2", default-features = false }
# Floor (not exact pin) so a downstream noir acvm toolchain — which pulls
# `der 0.8 -> zeroize ^1.8` — can coexist in one workspace resolution.
zeroize        = { version = "1.7", default-features = false }
zeroize_derive = { version = "1.4", default-features = false }
# pso-protocol-derive proc-macro stack.
syn         = { version = "2", features = ["full"] }
quote       = "1"
proc-macro2 = "1"
