[package]
name = "pso-protocol-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "#[derive(Entity)] for pso-protocol: maps a typed (e.g. Solidity-mirroring) struct's named fields to the canonical entity preimage."
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn         = { workspace = true }
quote       = { workspace = true }
proc-macro2 = { workspace = true }
